--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <div class="desc">
                 <h2>Fast Shipping</h2>
                 <p>
-                  We make sure you recieve your trombone as soon as we have finished
+                  We make sure you receive your trombone as soon as we have finished
                   making it. We also provide free returns if you are not satisfied.
                 </p>
               </div>
